<?xml version="1.0" encoding="UTF-8"?>
<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14313.18" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="Rm2-4h-gMY">
    <device id="retina4_7" orientation="portrait">
        <adaptation id="fullscreen"/>
    </device>
    <dependencies>
        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14283.14"/>
        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
    </dependencies>
    <scenes>
        <!--View Controller-->
        <scene sceneID="tne-QT-ifu">
            <objects>
                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="LabTunes" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="2uo-Jg-gey">
                                <rect key="frame" x="28" y="161" width="319" height="30"/>
                                <accessibility key="accessibilityConfiguration" identifier="usernametextfield"/>
                                <nil key="textColor"/>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <textInputTraits key="textInputTraits"/>
                            </textField>
                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="gWv-rw-SZZ">
                                <rect key="frame" x="28" y="240" width="319" height="30"/>
                                <accessibility key="accessibilityConfiguration" identifier="passwordtextfield"/>
                                <nil key="textColor"/>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <textInputTraits key="textInputTraits" secureTextEntry="YES" textContentType="password"/>
                            </textField>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="s2a-gZ-SKh">
                                <rect key="frame" x="152" y="352" width="71" height="30"/>
                                <accessibility key="accessibilityConfiguration" identifier="loginbutton">
                                    <bool key="isElement" value="YES"/>
                                </accessibility>
                                <state key="normal" title="Ingresar"/>
                                <connections>
                                    <action selector="loginButtonWasTouchUoInside:" destination="BYZ-38-t0r" eventType="touchUpInside" id="xYm-Wk-7Zv"/>
                                </connections>
                            </button>
                        </subviews>
                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                        <constraints>
                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="gWv-rw-SZZ" secondAttribute="trailing" constant="28" id="7my-fy-syo"/>
                            <constraint firstItem="2uo-Jg-gey" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="97" id="Bah-Ff-yCu"/>
                            <constraint firstItem="2uo-Jg-gey" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="28" id="JyI-ng-VjJ"/>
                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="s2a-gZ-SKh" secondAttribute="trailing" constant="152" id="RlR-7O-9gQ"/>
                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="2uo-Jg-gey" secondAttribute="trailing" constant="28" id="Y46-Ux-FsZ"/>
                            <constraint firstItem="s2a-gZ-SKh" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="152" id="bcD-vl-je0"/>
                            <constraint firstItem="gWv-rw-SZZ" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="28" id="bfo-4a-7Mh"/>
                            <constraint firstItem="gWv-rw-SZZ" firstAttribute="top" secondItem="2uo-Jg-gey" secondAttribute="bottom" constant="49" id="c5y-Es-vnE"/>
                            <constraint firstItem="s2a-gZ-SKh" firstAttribute="top" secondItem="gWv-rw-SZZ" secondAttribute="bottom" constant="82" id="hm7-8E-u1L"/>
                        </constraints>
                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                    </view>
                    <navigationItem key="navigationItem" id="4WC-xM-6p3"/>
                    <connections>
                        <outlet property="password" destination="gWv-rw-SZZ" id="fSW-2b-dfv"/>
                        <outlet property="user" destination="2uo-Jg-gey" id="VpC-8M-xXX"/>
                        <segue destination="nQ9-1f-vhM" kind="show" identifier="loginSuccess" id="fji-1F-Zb0"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="1076" y="133.5832083958021"/>
        </scene>
        <!--Music View Controller-->
        <scene sceneID="zIk-LH-DNQ">
            <objects>
                <viewController id="nQ9-1f-vhM" customClass="MusicViewController" customModule="LabTunes" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="1cB-az-c8j">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="UGq-dA-Iro">
                                <rect key="frame" x="0.0" y="64" width="375" height="603"/>
                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                <prototypes>
                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="musicCell" id="O9a-qv-gOh">
                                        <rect key="frame" x="0.0" y="28" width="375" height="44"/>
                                        <autoresizingMask key="autoresizingMask"/>
                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="O9a-qv-gOh" id="CRD-Nd-SUf">
                                            <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
                                            <autoresizingMask key="autoresizingMask"/>
                                        </tableViewCellContentView>
                                    </tableViewCell>
                                </prototypes>
                                <connections>
                                    <outlet property="dataSource" destination="nQ9-1f-vhM" id="2zZ-Ag-4CG"/>
                                </connections>
                            </tableView>
                        </subviews>
                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                        <accessibility key="accessibilityConfiguration" identifier="MusicView">
                            <bool key="isElement" value="YES"/>
                        </accessibility>
                        <constraints>
                            <constraint firstItem="jJb-ME-H04" firstAttribute="bottom" secondItem="UGq-dA-Iro" secondAttribute="bottom" id="FE1-Eq-9xA"/>
                            <constraint firstItem="UGq-dA-Iro" firstAttribute="leading" secondItem="jJb-ME-H04" secondAttribute="leading" id="Jik-vK-nMB"/>
                            <constraint firstItem="UGq-dA-Iro" firstAttribute="top" secondItem="jJb-ME-H04" secondAttribute="top" id="PZ0-uH-uhV"/>
                            <constraint firstItem="jJb-ME-H04" firstAttribute="trailing" secondItem="UGq-dA-Iro" secondAttribute="trailing" id="uL2-YD-3hR"/>
                        </constraints>
                        <viewLayoutGuide key="safeArea" id="jJb-ME-H04"/>
                    </view>
                    <connections>
                        <outlet property="songTableView" destination="UGq-dA-Iro" id="Qvj-kt-aTD"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="s1b-O7-mqU" userLabel="First Responder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="1810" y="132"/>
        </scene>
        <!--Navigation Controller-->
        <scene sceneID="TRG-zw-JVN">
            <objects>
                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="Rm2-4h-gMY" sceneMemberID="viewController">
                    <toolbarItems/>
                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="7gK-u7-PdU">
                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
                        <autoresizingMask key="autoresizingMask"/>
                    </navigationBar>
                    <nil name="viewControllers"/>
                    <connections>
                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="g7a-UA-CE1"/>
                    </connections>
                </navigationController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="yJ7-0W-Lsy" userLabel="First Responder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="222" y="134"/>
        </scene>
    </scenes>
</document>
